# datascience_agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
notebooks/: 01_eda_sensai_chats.ipynb
src/datascience_agent/: __init__.py  ensemble_model.py  feature_engineering.py  final_evaluation.py  model_training.py  preprocessing.py  sampling.py  shap_explainer.py  tfidf_features.py  utils.py
tests/: test_utils.py
